fix(mobile nav): Good enough fix for mobile web navigation menu on Firefox
Allows absolutely positioned mobile nav menu to actually render onto the screen with the correct height, the previous user of height percentage was ignored by browsers.

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -607,7 +607,7 @@ input.noselect {
 }
 .mobileNavMenu {
   position: absolute;
-  height: calc(100% - 60px);
+  height: calc(100vh - 60px);
   box-sizing: border-box;
   top: 60px;
   width: 100%;
